fix tentacle spin

--- a/.gutconfig.json
+++ b/.gutconfig.json
@@ -1,5 +1,5 @@
 {
-  "dirs": ["res://"],
+  "dirs": ["res://tests"],
   "double_strategy": "partial",
   "ignore_pause": false,
   "include_subdirs": true,
